# rekkobook

./: .buildinfo  .gitignore  CNAME  LICENSE  README.md  genindex.html  index.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy  deploy.yml
_sources/chapter1/: baseline.ipynb  baseline.md  collab_filter.ipynb  collab_filter.md  content_collab_filters.ipynb  content_filter.ipynb  full_pipeline.ipynb  full_pipeline.md  intro_to_rekko.md  ranker.ipynb  validation_metrics.ipynb
_sources/chapter2/: api_dev.ipynb  api_dev.md  docker.ipynb  docker.md  intro_to_deployment.ipynb  intro_to_deployment.md
chapter1/: baseline.html  collab_filter.html  content_collab_filters.html  content_filter.html  full_pipeline.html  intro_to_rekko.html  ranker.html  validation_metrics.html
chapter2/: api_dev.html  docker.html  intro_to_deployment.html
chapter3/: intro_to_analytics.html
docs/: CNAME  _config.yml  _toc.yml  index.md
docs/chapter1/: baseline.md  collab_filter.md  content_filter.md  full_pipeline.md  intro_to_rekko.md  ranker.md  validation_metrics.md
docs/chapter2/: api_dev.md  docker.md  intro_to_deployment.md
docs/chapter3/: intro_to_analytics.md
jupyter_books/: _config.yml  _toc.yml  index.md
jupyter_books/_build/.doctrees/: environment.pickle  index.doctree  intro.doctree
jupyter_books/_build/.doctrees/chapter1/: baseline.doctree  content_collab_filters.doctree  index.doctree  intro_to_rekko.doctree  overview.doctree
jupyter_books/_build/html/: .buildinfo  genindex.html  index.html  intro.html  objects.inv  search.html  searchindex.js
jupyter_books/chapter1/: baseline.md  content_collab_filters.md  intro_to_rekko.md
notebook_drafts/: baseline.ipynb  doc2vec.ipynb  full_recsys_pipeline.ipynb  implicit.ipynb  learning_to_rank.ipynb  lightfm.ipynb  metrics.ipynb  word2vec.ipynb
supplements/recsys/:  inference.py  Dockerfile  Makefile  README  README.md  api.py  docker-compose.yml  inference.py  pyproject.toml  requirements.txt  reset.sh  start.sh  train.py
supplements/recsys/app/: api.py  api_simple_example.py
supplements/recsys/artefacts/: catboost_clf.cbm
supplements/recsys/configs/: config.py  features.toml  models_params.toml  ranker_data_prep.toml  user_features.toml
supplements/recsys/data_prep/: prepare_ranker_data.py
supplements/recsys/models/: lfm.py  pipeline.py  ranker.py
supplements/recsys/utils/: utils.py
(+16 files in other folders)
