[tool.poetry]
name = "rekko_handbook"
version = "0.1.0"
description = "Rekko Handbook Dependencies"
authors = ["Shuhrat Khalilbekov <khalilbekov92@gmail.com>"]
license = "CCBY-4.0"

[tool.poetry.dependencies]
python = "^3.9"
pip = ">=20.0.2"
numpy = ">=1.20.3"
pandas = ">=1.3.4"
scikit-learn = "0.24.2"
nltk = "3.6.5"
catboost = "1.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
