[tool.poetry]
name = "recsys"
version = "0.1.0"
description = "Rekko Handbook Dependencies"
authors = ["Shuhrat Khalilbekov <khalilbekov92@gmail.com>"]
license = "CCBY-4.0"

[tool.poetry.dependencies]
python = "^3.9"
pip = ">=20.0.2"
numpy = "1.23.3"
pandas = "1.5.1"
scikit-learn = "1.2.1"
catboost = "1.1"
scipy = "1.9.3"
dill = "^0.3.6"
fire = "^0.5.0"
dynaconf = "^3.1.12"
fastparquet = "^2023.2.0"
pyarrow = "^11.0.0"
flask = "^2.3.2"
cachetools = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
